--- a/oz_pro/templates/customers.html
+++ b/oz_pro/templates/customers.html
@@ -65,9 +65,12 @@
     
     {% block content %}
     {% load static %}
-    <div>
-    <h1>Customers Table:</h1>
-    </div>
+    
+    <br>
+        <div class="table-header">
+            <h1>Customers Table:</h1>
+        </div>
+    <br>
 
     <!-- customers Table -->
     <table class="table table-hover">
