--- a/oz_pro/templates/events.html
+++ b/oz_pro/templates/events.html
@@ -71,9 +71,11 @@
 {% block content %}
 {% load static %}
 
-    <div>
-    <h1>Events</h1>
-    </div>
+    <br>
+        <div class="table-header">
+            <h1>Events Table:</h1>
+        </div>
+    <br>
 
     <!-- Events Table -->
     <table class="table table-hover">
