--- a/oz_pro/templates/service_packages.html
+++ b/oz_pro/templates/service_packages.html
@@ -58,9 +58,12 @@
 {% block content %}
 {% load static %}
 
-    <div>
-    <h1>Service Packages Table:</h1>
-    </div>
+    <br>
+        <div class="table-header">
+            <h1>Service Packages Table:</h1>
+        </div>
+    <br>
+  
     <!-- service packages Table -->
     <table class="table table-hover">
         <thead>
