--- a/oz_pro/templates/events.html
+++ b/oz_pro/templates/events.html
@@ -20,24 +20,45 @@
         <div class="modal fade" id="addEventModal" tabindex="-1" aria-labelledby="addEventModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content" style="background-color: #1E4620; color: #fff;">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="addEventModalLabel">Event Details: </h5>
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="addEventModalLabel">Event Details: </h5>
                         
-                        <button class="custom-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button class="custom-close" data-bs-dismiss="modal" aria-label="Close"></button>
 
-                    </div>
+                        </div>
                     <div class="modal-body">
                         
                         <form method="POST" action="{% url 'add_event'%}">
                             {% csrf_token %}
 
-                            <div class="mb-3">
+                          
+                            {% comment %} <div class="mb-3">
                                 <label for="customerFK" class="form-label">Customer ID:</label>
-                                <input type="text" class="form-control" id="customerFK" name="addCustomerID">
-                            </div>
+                                <a href="#" data-bs-toggle="modal" data-bs-target="#addCustomerModal">
+                                    If Customer not exist, click here to create Customer!
+                                </a>
+                                <input type="text" class="form-control" id="Customer" name="addCustomerID">
+                            </div> {% endcomment %}
+
                             <div class="mb-3">
-                                <label for="servicePackageFK" class="form-label">Service Package ID:</label>
-                                <input type="text" class="form-control" id="servicePackageFK" name="addServicePackageID">
+                                <label for="customerFK" class="form-label">Customer:</label>
+                                <a href="#" data-bs-toggle="modal" data-bs-target="#addCustomerModal">
+                                    If Customer not exist, click here to create Customer!
+                                </a>
+                                <select id="customerFK" name="addCustomerID" class="form-control">
+                                    {% for cust in customers %}
+                                        <option value="{{ cust.ID }}">ID:{{cust.ID}}, Name:{{ cust.name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="servicePackageFK" class="form-label">Service Package:</label>
+                                <select id="servicePackageFK" name="addServicePackageID" class="form-control">
+                                    {% for sp in service_packages %}
+                                        <option value="{{ sp.ID }}">{{ sp.name }}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
                             <div class="mb-3">
                                 <label for="eventName" class="form-label">Event's Name:</label>
@@ -60,11 +81,58 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button type="submit" class="btn btn-success">Add</button></form>
-                        
+             
+
+                    </div>
+                    
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="modal fade" id="addCustomerModal" tabindex="-1" aria-labelledby="addCustomerModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" style="background-color: #1E4620; color: #fff;">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addCustomerModalLabel">Customer Details: </h5>
+                    
+                    <button class="custom-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                </div>
+                <div class="modal-body">
+                    
+                    <form method="POST" action="{% url 'add_customer_events_page'%}">
+                        {% csrf_token %}
+
+                        <div class="mb-3">
+                            <label for="customerID" class="form-label">Customer ID:</label>
+                            <input type="text" class="form-control" id="customerID" name="addID">
+                        </div>
+                        <div class="mb-3">
+                            <label for="customerName" class="form-label">Customer Name:</label>
+                            <input type="text" class="form-control" id="customerName" name="addName">
+                        </div>
+                        <div class="mb-3">
+                            <label for="customerTel" class="form-label">Phone Number:</label>
+                            <input type="text" class="form-control" id="customerTel" name="addTel">
+                        </div>
+                        <div class="mb-3">
+                            <label for="customerType" class="form-label">Customer Type:</label>
+                            <input type="text" class="form-control" id="customerType" name="addType">
+                        </div>
+                  
+                       
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-success">Add</button></form>
+                    
+                </div>
+            </div>
+        </div>
+    </div>    
 
     {% endblock %}
 
@@ -84,8 +152,8 @@
                 <th></th>
                 <th></th>
                 <th>ID</th>
-                <th>Customer ID</th>
-                <th>Service Package ID</th>
+                <th>Customer</th>
+                <th>Service-Package</th>
                 <th>Event's Name</th>
                 <th>Venue</th>
                 <th>Attendees</th>
@@ -101,7 +169,7 @@
                 <td><input type="checkbox" onchange="toggleHighlight(this, {{ event.ID }})" title="Highlight"></td>
                 <td><img src="{{ event.image.url }}"  alt="My image" class="smaller-image" /></td>
                 <td>{{ event.ID }}</td>
-                <td>{{ event.customer|linebreaks }}</td>
+                <td><a title="DISPLAY-CUSTOMER"href="{% url 'customer_by_event' event.customer.ID %}">{{ event.customer|linebreaks }}</a></td>
                 <td>{{ event.service_package|linebreaks }}</td>
                 <td>{{ event.name }}</td>
                 <td>{{ event.venue }}</td>
