--- a/oz_pro/templates/welcome.html
+++ b/oz_pro/templates/welcome.html
@@ -190,7 +190,7 @@
                     <h5 class="modal-title" id="agentLoginModalLabel">Agent Login</h5>
                     <button type="button" class="btn-close btn-light" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-
+  
                 {% comment %} Agent login form {% endcomment %}
                 <div class="modal-body">  
                     <form method="POST" action="{% url 'agent_login' %}">
@@ -212,6 +212,7 @@
                 </div>
             </div>
         </div>
+    </div>
     {% endif %}
 
 
